Fix gui overlapping