@@ -6,6 +6,7 @@ import java.util.List;
 import logisticspipes.request.resources.IResource;
 import logisticspipes.request.resources.IResource.ColorCode;
 import logisticspipes.utils.gui.LPGuiGraphics;
+import logisticspipes.utils.gui.SmallGuiButton;
 import logisticspipes.utils.gui.SubGuiScreen;
 import logisticspipes.utils.item.ItemIdentifierStack;
 
@@ -16,10 +17,9 @@ import network.rs485.logisticspipes.util.TextUtil;
 
 public class GuiRequestPopup extends SubGuiScreen {
 
-	private String[] text;
+	private final String[] text;
 	private int mWidth = 0;
-	private Player player;
-	private logisticspipes.utils.gui.SmallGuiButton logButton = null;
+	private final Player player;
 
 	public GuiRequestPopup(Player player, Object... message) {
 		super(200, (message.length * 10) + 40, 0, 0);
@@ -48,10 +48,10 @@ public class GuiRequestPopup extends SubGuiScreen {
 	@Override
 	public void init() {
 		super.init();
-		logisticspipes.utils.gui.SmallGuiButton ok = new logisticspipes.utils.gui.SmallGuiButton(0, xCenter - 55, bottom - 25, 50, 20, "OK");
+		SmallGuiButton ok = new SmallGuiButton(0, xCenter - 55, bottom - 25, 50, 20, "OK");
 		ok.setPressListener(b -> exitGui());
 		addRenderableWidget(ok);
-		logButton = new logisticspipes.utils.gui.SmallGuiButton(1, xCenter + 5, bottom - 25, 50, 20, "Log");
+		SmallGuiButton logButton = new SmallGuiButton(1, xCenter + 5, bottom - 25, 50, 20, "Log");
 		logButton.setPressListener(b -> {
 			for (String msg : text) {
 				player.sendSystemMessage(Component.literal(msg));
@@ -71,18 +71,21 @@ public class GuiRequestPopup extends SubGuiScreen {
 					lWidth = tWidth;
 				}
 			}
-			xSize = mWidth = Math.max(Math.min(lWidth + 20, 400), 120);
+			xSize = mWidth = Math.clamp(lWidth + 20, 120, 400);
 			super.init();
 		}
 		LPGuiGraphics.drawGuiBackGround(guiGraphics, guiLeft, guiTop, right, bottom, 0.0f, true);
-		for (int i = 0; i < text.length; i++) {
-			if (text[i] == null) {
-				continue;
-			}
-			String msg = TextUtil.getTrimmedString(text[i], mWidth - 10, font, "...");
-			int stringWidth = minecraft.font.width(msg);
-            guiGraphics.drawString(minecraft.font, msg, xCenter - (stringWidth / 2), guiTop + 10 + (i * 10), 0x404040, false);
-		}
 	}
 
+    @Override
+    protected void renderLabels(GuiGraphics guiGraphics, int mouseX, int mouseY) {
+        for (int i = 0; i < text.length; i++) {
+            if (text[i] == null) {
+                continue;
+            }
+            String msg = TextUtil.getTrimmedString(text[i], mWidth - 10, font, "...");
+            int stringWidth = minecraft.font.width(msg);
+            guiGraphics.drawString(minecraft.font, msg, xCenter - (stringWidth / 2), guiTop + 10 + (i * 10), 0x404040, false);
+        }
+    }
 }
